[package]
name = "easy-pin"
version = "0.0.1-alpha"
authors = ["Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>"]
edition = "2018"

description = "Using Pin made easy."
keywords = ["Pin", "pin_utils", "proc_macro", "human", "easy"]

documentation = "https://docs.rs/easy-pin"
homepage = "https://crates.io/crates/easy-pin"
repository = "https://github.com/danielhenrymantilla/easy-pin-rs"

license-file = "LICENSE"
license = "MIT"

[dependencies]
easy-pin-proc-macro = { version = "0.0.1-alpha",  path = "proc-macro/" }

[dev-dependencies]
pin-utils = "0.1.0-alpha.4"
